Avoid scrollbars in office app if possible
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@34016 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -3709,3 +3709,10 @@ body.application.zoomedBody .gwt-SuggestBoxPopup {
 	left:115px;
 	top:85px;
 }
+
+/* make sure dummy canvas does not force a scrollbar */
+.dummyParent{
+		position:absolute;
+		left:1px;
+		top:1px;
+	}
